CORE-6827: Fixing alignment of the button on my order section.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/base/form/button/_button.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/base/form/button/_button.scss
@@ -74,6 +74,9 @@
     @include link-ripple;
 
     @include breakpoint($desktop) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       font-size: 0.75rem;
       height: 2.1875rem;
       padding: 0.375rem 0;
